im dumb, fixed overflow

--- a/src/components/affixes/weeklyaffix/weeklyaffix.css
+++ b/src/components/affixes/weeklyaffix/weeklyaffix.css
@@ -18,7 +18,7 @@
 
 .description-box{
 	border-top: 1px solid white;
-	overflow: scroll;
+	overflow: auto;
 	height: 100px;
 }
 
